--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <br>
 	<h2>Práctica 5 </h2>
 	<a href="practica5"> Practica 5 </a>
+<br>
+	<h2>Práctica 6 </h2>
+	<a href="practica6"> Practica 6 </a>
 </body>
 
 </html>
