--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <br>
 	<h2>Práctica 6 </h2>
 	<a href="practica6"> Practica 6 </a>
+<br>
+	<h1> Practicas PHP</h1>
+<br>
+	<h2> Practica 1</h2>
+	<a href="practica1php"> Practica 1 </a>
 </body>
 
 </html>
