--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 	<h2>Práctica 6 </h2>
 	<a href="practica6"> Practica 6 </a>
 <br>
-	<h1> Practicas PHP</h1>
+	<h1> Prácticas PHP</h1>
 <br>
-	<h2> Practica 1</h2>
-	<a href="practica1php"> Practica 1 </a>
+	<h2> Práctica 1</h2>
+	<a href="cyan-grata-46.tiiny.io" title="Práctica 1"> Práctica 1 </a>
+<br>
+	<h2> Práctica 2</h2>
+	<a href="azure-mahala-41.tiiny.io" title="Práctica 2"> Práctica 2 <a>
 </body>
 
 </html>
