--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	<h1> Prácticas PHP</h1>
 <br>
 	<h2> Práctica 1</h2>
-	<a href="cyan-grata-46.tiiny.io" title="Práctica 1"> Práctica 1 </a>
+	<a href="practica1php"> Práctica 1 </a>
 <br>
 	<h2> Práctica 2</h2>
-	<a href="azure-mahala-41.tiiny.io" title="Práctica 2"> Práctica 2 <a>
+	<a href="practica2php"> Práctica 2 <a>
 </body>
 
 </html>
