--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1> Prácticas de Programación Web (2:00 - 3:00) </h1>
 	<h2>Brian Fernando Luna Padrón</H1>
 	<h2>Práctica 1</h2>
-	<a href="practica1"> Practica 1</a>
+	<a href="practica1.html">Practica 1</a>
 <br>
 	<h2>Práctica 2</h2>
 	<a href="practica2"> Practica 2</a>
