--- a/index.html
+++ b/index.html
@@ -16,27 +16,36 @@
 	<a href="practica1.html">Practica 1</a>
 <br>
 	<h2>Práctica 2</h2>
-	<a href="practica2"> Practica 2</a>
+	<a href="practica2.html"> Practica 2</a>
 <br>
 	<h2>Práctica 3</h2>
-	<a href="practica3"> Practica 3</a>
+	<a href="practica3.html"> Practica 3</a>
 <br>
 	<h2>Práctica 4</h2>
-	<a href="practica4"> Practica 4</a>
+	<a href="practica4.html"> Practica 4</a>
 <br>
 	<h2>Práctica 5 </h2>
-	<a href="practica5"> Practica 5 </a>
+	<a href="practica5.html"> Practica 5 </a>
 <br>
 	<h2>Práctica 6 </h2>
-	<a href="practica6"> Practica 6 </a>
+	<a href="practica6.html"> Practica 6 </a>
 <br>
 	<h1> Prácticas PHP</h1>
-<br>
 	<h2> Práctica 1</h2>
-	<a href="practica1php"> Práctica 1 </a>
+	<a href="practica1php.php"> Práctica 1 </a>
 <br>
 	<h2> Práctica 2</h2>
-	<a href="practica2php"> Práctica 2 <a>
+	<a href="practica2php.php"> Práctica 2 <a>
+<br>
+	<h2> Práctica 3</h2>
+	<a href="practica3.php"> Práctica 3 <a>
+<br>
+	<h2> Práctica 4</h2>
+	<a href="practica4.php"> Práctica 4 <a>
+<br>
+	<h2> Práctica 5</h2>
+	<a href="practica5.php"> Práctica 5 <a>
+<br>
 </body>
 
 </html>
