--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 	<h2> Práctica 5</h2>
 	<a href="practica5.php"> Práctica 5 <a>
 <br>
+		<h2> Práctica 6</h2>
+	<a href="practica6.php"> Práctica 6 <a>
+<br>
+		<h2> Práctica 7</h2>
+	<a href="practica7.html"> Práctica 7 <a>
 </body>
 
 </html>
