--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<a href="practica6.php"> Práctica 6 <a>
 <br>
 		<h2> Práctica 7</h2>
-	<a href="practica7.html"> Práctica 7 <a>
+	<a href="practica7php.html"> Práctica 7 <a>
 </body>
 
 </html>
