--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 <br>
 		<h2> Práctica 7</h2>
 	<a href="practica7php.html"> Práctica 7 <a>
+<br>
+		<h2> Práctica 8</h2>
+	<a href="practica8php.html"> Práctica 8 <a>
+<br>
+		<h2> Práctica 9</h2>
+	<a href="practica9.php"> Práctica 9 <a>
 </body>
 
 </html>
