--- a/practica7php.html
+++ b/practica7php.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Screenshot de práctica realizada de manera local </h1>
-<img src="https://cdn.discordapp.com/attachments/1235122758023909429/1308136921741918300/image.png?ex=673cd8f2&is=673b8772&hm=2e1fba161370b6cbaad216f9887df1d0ab7334d3897e421219b8170c0ed0b5b8&" title="Screenshot">
+<img src="https://www.dropbox.com/scl/fi/0inbugxy8w4w4aps243ef/practica7.png?rlkey=ricp2d7pvzm0afeyl0zmzmw7j&st=6e3kp3ce&dl=0" title="Screenshot">
 
 </body>
 </html>
