--- a/practica7php.html
+++ b/practica7php.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Screenshot de práctica realizada de manera local </h1>
-<img src="https://www.dropbox.com/scl/fi/0inbugxy8w4w4aps243ef/practica7.png?rlkey=ricp2d7pvzm0afeyl0zmzmw7j&st=6e3kp3ce&dl=0" title="Screenshot">
+<img src="https://previews.dropbox.com/p/thumb/ACehXK9ZAOygB4B062MkbapRnqyvUqHNix3eZWDE3Oo6GKGpyskD1x_QTVbAWX5lyItmawD_bJMmwj_p2l6Ay0X4KnZPmdcYtyMsI8rut3wh0oGGw715ikoUzq8XyOe8clLKOsg1PEQlnLhmHAE8Hy3qzhbJ-cPd8RCuZpL8JAmnnGTsSmjPs4YdtkyDg_h-ovRmBJBDawQ6sylVwe7fr1Lonm6V1pL8FHf6FeHb9pryCDMZ3tGJuPqxkxbQwVlg_DWZbESZiyyr2VJfz_rsccFbNWEzFracHPUeAJRXdQr_WLPvP5-2k7OGvM-bQZLqHbZoBDYulzoKxsr5xGuyv9Qw/p.png?is_prewarmed=true" title="Screenshot">
 
 </body>
 </html>
