--- a/practica8php.html
+++ b/practica8php.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Screenshot de práctica 8 (eliminacion de una base de datos) realizada de manera local </h1>
-<img src="https://cdn.discordapp.com/attachments/1235122758023909429/1308881800483049552/image.png?ex=6740376b&is=673ee5eb&hm=9aa415afa41d4045d9ecfb8d7e3bd051e1dda03c8871777320791479b0cfc00e&" title="Screenshot">
+<img src="https://previews.dropbox.com/p/thumb/ACc2WlGym5cvmqwlkf3MpmVCSwqcG4Zilw1PqvQ6Uq4v0b-zHEa_Mr5hW9cDdp5pUotdjwov3Q7bUo7f-XeSJkSHqB_CF7NcKoIPXGzo6DTQTjKShBAOVNvI40aaGIPKYDL-WIxuSW9TJYVzjihTHicrtsS-MxBJhhTFuPS9GGpxM1tlyZ2-c4e3TUUW1elNOQdr98mTH04zmvJto9oowFFZ9ok3sduxXbwGZ-16qqDlhdx7f8OTt_hrt3RRs73yQCF14ii4ktUsZfbM1izwpv-tPwHWionzQjFUWgEBpqGxb8-ok4n1fLtL717Z0gAc4Njg6puNqoIXFPbsL_E6qgfz/p.png?is_prewarmed=true" title="Screenshot">
 
 </body>
 </html>
