--- a/practica7php.html
+++ b/practica7php.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Screenshot de práctica realizada de manera local </h1>
-<img src="<a href="https://ibb.co/rkB6Tpq"><img src="https://i.ibb.co/hsGWhdr/practica7.png" alt="practica7" border="0"></a>" title="Screenshot">
+<img src="<a href="https://ibb.co/rkB6Tpq"><img src="https://i.ibb.co/hsGWhdr/practica7.png" alt="practica7" border="0"></a>">
 
 </body>
 </html>
