--- a/practica8php.html
+++ b/practica8php.html
@@ -10,7 +10,6 @@
 
 <body>
 <h1> Screenshot de práctica 8 (eliminacion de una base de datos) realizada de manera local </h1>
-<img src="https://previews.dropbox.com/p/thumb/ACc2WlGym5cvmqwlkf3MpmVCSwqcG4Zilw1PqvQ6Uq4v0b-zHEa_Mr5hW9cDdp5pUotdjwov3Q7bUo7f-XeSJkSHqB_CF7NcKoIPXGzo6DTQTjKShBAOVNvI40aaGIPKYDL-WIxuSW9TJYVzjihTHicrtsS-MxBJhhTFuPS9GGpxM1tlyZ2-c4e3TUUW1elNOQdr98mTH04zmvJto9oowFFZ9ok3sduxXbwGZ-16qqDlhdx7f8OTt_hrt3RRs73yQCF14ii4ktUsZfbM1izwpv-tPwHWionzQjFUWgEBpqGxb8-ok4n1fLtL717Z0gAc4Njg6puNqoIXFPbsL_E6qgfz/p.png?is_prewarmed=true" title="Screenshot">
-
+<a href="https://ibb.co/F0SXwcc"><img src="https://i.ibb.co/z7yFRCC/practica8.png" alt="practica8" border="0"></a>
 </body>
 </html>
