--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 <br>
 		<h2> Práctica 9</h2>
 	<a href="practica9.php"> Práctica 9 <a>
+<br>
+		<h2> Práctica 10</h2>
+	<a href="practica10.html"> Práctica 10 <a>
 </body>
 
 </html>
